https://unit.atlassian.net/browse/NP-44716 UpdatePublicationHandler